# BioPipelines

./: .gitignore  ARCHITECTURE_REVIEW.md  CONTAINER_IMPLEMENTATION_SUMMARY.md  Makefile  PIPELINE_STATUS_FINAL.md  PREFLIGHT_SUMMARY.txt  README.md  REORGANIZATION_SUMMARY.md  TESTING_PLAN_20251126.md  TEST_QUICK_REFERENCE.md  alembic.ini  codebase_assessment.md  environment.yml  environment_test.yml  mcp-config.json  pyproject.toml  requirements-composer.txt
.biopipelines/: agent_memory.db
.github/workflows/: chat-agent-evaluation.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
config/: README.md  analysis_definitions.yaml  composer.yaml  defaults.yaml  error_patterns.yaml  features.yaml  slurm.yaml  tool_mappings.yaml
config/skills/: __init__.py  clinvar.yaml  kegg.yaml  pubmed.yaml  reactome.yaml  string_db.yaml  uniprot.yaml
containers/base/: Dockerfile  README.md
containers/hic/: hic.def
containers/metagenomics/: metagenomics.def
containers/methylation/: methylation.def
containers/rna-seq/: Dockerfile  entrypoint.sh  run_pipeline.sh
containers/scrna-seq/: scrna-seq.def
containers/structural-variants/: structural-variants.def
containers/tier2/: alignment_short_read.def  peak_calling.def  quantification.def
containers/workflow-engine/: workflow-engine.def
data/: evaluation_history.db  processed  raw
data/feedback/: confirmations.jsonl
deprecated/agents/: tools.py
deprecated/models/: router.py
deprecated/web/: app_legacy.py
docker/: .env.example  Dockerfile.api  Dockerfile.worker  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml
docs/: AGENTIC_SYSTEM_ARCHITECTURE.md  AGENT_TRACE_ANALYSIS.md  AI_WORKFLOW_COMPOSER_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_AND_GUIDE.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_PLAN_REVIEW.md  ARCHITECTURE_REVIEW.md  CAPABILITY_INTEGRATION_PLAN.md  CELLRANGER_INSTALLATION.md  CLAUDE_SKILLS_INTEGRATION_PLAN.md  CODEBASE_CLEANUP_PLAN.md  COMPOSITION_PATTERNS.md  CONTAINER_ARCHITECTURE.md  CRITICAL_EVALUATION.md  DEEPCODE_ENHANCEMENTS_PLAN.md  DIAGNOSIS_AGENT_SUMMARY.md  DYNAMIC_CONTAINER_STRATEGY.md  DYNAMIC_STRATEGY_IMPLEMENTATION_PLAN.md  ENVIRONMENT_ARCHITECTURE_ANALYSIS.md  ERROR_DIAGNOSIS_AGENT_IMPLEMENTATION.md  HIERARCHICAL_INTENT_PARSING_PLAN.md  IMPLEMENTATION_GAP_ANALYSIS.md  ISOLATED_COMPONENTS_ANALYSIS.md  MCP_INTEGRATION.md  MODULE_LIBRARY_SUMMARY.md  NEXTFLOW_ARCHITECTURE_PLAN.md  NLU_ENHANCEMENT_PLAN.md  ORCHESTRATOR_8B_INTEGRATION.md  PROFESSIONAL_CHAT_AGENT_IMPLEMENTATION.md  PROGRESS_SESSION_20241125.md  REFACTORING_IMPLEMENTATION_PLAN.md  REPOSITORY_CLEANUP_ANALYSIS.md  RESILIENCE_OBSERVABILITY_PLAN.md  RESULTS_VISUALIZATION_DESIGN.md  TESTING_GUIDE.md  TEST_SUITE_ARCHITECTURE.md  TIER2_CONTAINER_DESIGN.md  TODO_CONSOLIDATED.md  TRAINING_DATA_COLLECTION_PLAN.md  (+3 more)
docs/archive/: AGENTIC_CHAT_ARCHITECTURE.md  AGENTIC_SYSTEM_IMPLEMENTATION.md  AGENT_REFACTORING_PLAN.md  AGENT_SYSTEM_REVIEW.md  API_REFERENCE.md  ARCHITECTURE_v2.1.0_20251130.md  CODEBASE_CLEANUP_PLAN.md  (+24 more)
examples/: ai_agent_usage.py
nextflow-modules/: README.md
nextflow-pipelines/: PARALLEL_VALIDATION_PLAN.md  PIPELINE_VALIDATION_TRACKER.md  nextflow.config
reports/: PARSER_GAP_ANALYSIS.md  code_quality_report.md
scripts/: README.md  advanced_evaluation_runner.py  build_bowtie2_index_hg38.sh  build_star_index_scrna.sh  build_star_index_yeast.sh  build_tier2_containers.sh  ci_test.py  cleanup_codebase.py  code_quality_report.py  connect.sh  download_cellranger_reference.sh  download_chipseq_control.py  download_chipseq_encode.py  download_chipseq_no_ssl.py  download_chipseq_proper.py  download_datasets.py  download_hic_data.sh  download_hic_test.py  download_metagenomics_data.sh  download_metagenomics_test.py  download_methylation_test.py  download_scrna_test_data.py  download_test_datasets.py  download_validated_test_data.sh  error_pattern_analyzer.py  gcp_stage_data.sh  launch_web_ui.sh  llm_api_keys.sh  metrics_dashboard.py  pre_build_conda_envs.sh  run_tests.sh  setup_base_tools.sh  setup_kraken2_db.sh  start_gradio.sh  start_server.sh  start_web_ui.sbatch  submit_all_pipelines.sh  submit_atac_seq.sh  submit_chip_seq.sh  submit_chip_seq_simple.sh  (+21 more)
tests/: conftest.py  test_ab_testing.py  test_agentic_router.py  test_chat_agent.py  test_conversation_analytics.py  test_database_clients.py  test_deepcode_memory.py  test_deepcode_utilities.py  test_diagnosis.py  test_dialog_state_machine.py  test_human_handoff.py  test_integration.py  test_mcp_server.py  test_orchestrator_8b.py  test_out_of_scope.py  test_professional_nlu.py  test_provisioning.py  test_rag_enhancement.py  test_response_generator.py  test_results.py  test_rich_responses.py  test_session_recovery.py  test_skill_registry.py  test_training_module.py  test_unified_agent.py  test_workflow_composer.py
tools/: manta_wrapper.sh
training_data/: biopipelines_training_openai_20251203_034147.jsonl  test_multiturn_20251203_032853.jsonl  test_openai_20251203_032853.jsonl  test_pipeline_openai_20251203_033451.jsonl
(+497 files in other folders)
