[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biopipelines"
version = "0.1.0"
description = "Comprehensive bioinformatics pipelines for NGS and genomic data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bioinformatics", "genomics", "NGS", "pipelines", "variant-calling", "RNA-seq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "biopython>=1.81",
    "pysam>=0.21",
    "pyBigWig>=0.3",
    "pybedtools>=0.9",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.14",
    "snakemake>=7.30",
    "dask[complete]>=2023.5",
    "requests>=2.31",  # For data downloads
]

[project.optional-dependencies]
download = [
    "pysradb>=1.4",  # SRA/GEO downloads
    "ffq>=0.3",      # Fast SRA metadata
]

dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "black>=23.3",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.3",
    "sphinx>=6.2",
    "sphinx-rtd-theme>=1.2",
]

rna = [
    "rpy2>=3.5",  # For DESeq2, edgeR
]

visualization = [
    "igv-notebook>=0.5",
    "pysam>=0.21",
]

[project.scripts]
biopipes-download = "biopipelines.data_download.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/BioPipelines"
Documentation = "https://biopipelines.readthedocs.io"
Repository = "https://github.com/YOUR_USERNAME/BioPipelines"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/BioPipelines/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biopipelines = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=biopipelines",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
