[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-composer"
version = "0.2.0"
description = "AI-driven bioinformatics workflow composition with LLM integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BioPipelines Team", email = "biopipelines@example.com"}
]
keywords = ["bioinformatics", "genomics", "workflows", "nextflow", "AI", "LLM", "pipelines"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "graphviz>=0.20",
    "click>=8.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.5",
    "transformers>=4.30",
    "torch>=2.0",
]

web = [
    "flask>=3.0",
    "watchdog>=3.0",
]

dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "black>=23.3",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.3",
]

all = [
    "workflow-composer[llm,web,dev]",
]

[project.scripts]
workflow-composer = "workflow_composer.cli:main"
wfcomposer = "workflow_composer.cli:main"

[project.urls]
Homepage = "https://github.com/sdodlapa/BioPipelines"
Documentation = "https://biopipelines.readthedocs.io"
Repository = "https://github.com/sdodlapa/BioPipelines"
"Bug Tracker" = "https://github.com/sdodlapa/BioPipelines/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["workflow_composer*"]

[tool.setuptools.package-data]
workflow_composer = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Ignore archived tests (deprecated code)
norecursedirs = ["_archived", "__pycache__", ".git"]
addopts = [
    "--verbose",
    "--cov=workflow_composer",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--ignore=tests/_archived",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
